<resources>
    <string name="app_name">Swoosh</string>
    <string name="backgroung_image1">bockgroung image</string>
    <string name="backgroung_image2">bockgroung image</string>
    <string name="logo">logo</string>
    <string name="go_all_in">Go all in</string>
    <string name="on_going_all_out">on going all out</string>
    <string name="find_a_team_in_youre_sity_and_dominate_league">Find a team in youre sity and dominate league</string>
    <string name="get_started">get started</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="desired_language">Desired language</string>
    <string name="next">NEXT</string>
    <string name="i_am_a">I am a :</string>
    <string name="beginner">beginner</string>
    <string name="beginner1">beginner</string>
    <string name="beginner2">beginner</string>
    <string name="baller">baller</string>
    <string name="baller1">baller</string>
    <string name="baller2">baller</string>
    <string name="finish">finish</string>
    <string name="todo">TODO</string>
    <string name="backgroung_image3">backgroung image3</string>
    <string name="search_league">Looking for a co-ed beginner league near you ...</string>
    <string name="picture_backgraund">picture_backgraund</string>
</resources>